2023-09-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (BlobRead): For old libJasper, return 0 for size
	value if the actual value does not fit in an 'int'.
	* coders/jp2.c (BlobWrite): For old libJasper, return 0 for size
	value if the actual value does not fit in an 'int'.

	* magick/command.c (MagickCommand): Eliminate duplicate utility
	name output in error messages when utility is executed via a
	magick compatibility link.  For example via symbolic link from
	'convert' to 'gm'.  This problem was added when the initial batch
	mode implementation was submitted.  Addresses SourceForge issue
	#727 "convert convert" in error messages.

	* VisualMagick/configure/welcome_page.cpp: Update configure
	welcome text based on my current understanding.

2023-09-17  Fojtik Jaroslav  <JaFojtik@yandex.com>
	* VisualMagick/configure/welcome_page.cpp Notify user that MSVC
	older than 2008 is not supported.

	* VisualMagick/magick/magick_config.h.in Expose ENABLE_SVG_WRITER.
	For debugging purpose this should be always enabled. Only for
	final release you can disable it.

2023-09-16  Fojtik Jaroslav  <JaFojtik@yandex.com>
	* coders/mat.c Cleanup one unneeded warning.

2023-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/magick/magick_config.h.in: Update the copyright
	year range.

	* Copyright.txt: Update the copyright year.

2023-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wmf.c (ipa_bmp_draw): Print bmp.data as the pointer it is
	rather than casting to a 'long'.

	* coders/pnm.c (PNMReadThreads): Fix compiler warning regarding
	overflow.

	* coders/sun.c (WriteSUNImage): Test for sun_info.length overflow
	in a way which should not provoke a compiler warning.

2023-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/magick/magick_config.h.in: Block building the XTRN
	coder unless the user enables EnableXTRNCoder.  The XTRN coder is